Proofread Chapter 5 - graphics

--- a/03.05-graphs.Rmd
+++ b/03.05-graphs.Rmd
@@ -1,14 +1,13 @@
 # Drawing graphs{#graphics}
 
->*Above all else show the data.*
->
->--Edward Tufte^[The origin of this quote is Tufte's lovely book*The Visual Display of Quantitative Information*]
+|      *Above all else show the data.*
+|                  -- Edward Tufte^[The origin of this quote is Tufte's lovely book*The Visual Display of Quantitative Information*]
 
 Visualising data is one of the most important tasks facing the data analyst. It's important for two distinct but closely related reasons. Firstly, there's the matter of drawing 'presentation graphics', displaying your data in a clean, visually appealing fashion makes it easier for your reader to understand what you're trying to tell them. Equally important, perhaps even more important, is the fact that drawing graphs helps *you* to understand the data. To that end, it's important to draw 'exploratory graphics' that help you learn about the data as you go about analysing it. These points might seem pretty obvious but I cannot count the number of times I've seen people forget them. 
 
-To give a sense of the importance of this chapter, I want to start with a classic illustration of just how powerful a good graph can be. To that end, the figure below shows a redrawing of one of the most famous data visualisations of all time. This is John Snow's 1854 map of cholera deaths. The map is elegant in its simplicity. In the background we have a street map which helps orient the viewer. Over the top we see a large number of small dots, each one representing the location of a cholera case. The larger symbols show the location of water pumps, labelled by name. Even the most casual inspection of the graph makes it very clear that the source of the outbreak is almost certainly the Broad Street pump. Upon viewing this graph Dr Snow arranged to have the handle removed from the pump and ended the outbreak that had killed over 500 people. Such is the power of a good data visualisation.
+To give a sense of the importance of this chapter, I want to start with a classic illustration of just how powerful a good graph can be. To that end, Figure \@ref(fig:snowmap1) shows a redrawing of one of the most famous data visualisations of all time. This is John Snow's 1854 map of cholera deaths. The map is elegant in its simplicity. In the background we have a street map which helps orient the viewer. Over the top we see a large number of small dots, each one representing the location of a cholera case. The larger symbols show the location of water pumps, labelled by name. Even the most casual inspection of the graph makes it very clear that the source of the outbreak is almost certainly the Broad Street pump. Upon viewing this graph Dr Snow arranged to have the handle removed from the pump and ended the outbreak that had killed over 500 people. Such is the power of a good data visualisation.
 
-```{r snowmap1, echo = FALSE, warning=FALSE, message=FALSE}
+```{r snowmap1, echo = FALSE, warning=FALSE, message=FALSE, fig.cap = "A stylised redrawing of John Snow’s original cholera map. Each small dot represents the location of a cholera case and each large circle shows the location of a well. As the plot makes clear, the cholera outbreak is centred very closely on the Broad St pump"}
 require(HistData)
 	data(Snow.deaths); data(Snow.pumps); data(Snow.streets); data(Snow.polygons)
 
@@ -16,24 +15,24 @@ require(HistData)
 
 	# define some funtions to make the pieces re-usable
 	Sdeaths <- function(col="orange", pch=15, cex=0.6, points = TRUE, title = NULL) {
-	  	# make sure that the plot limits include all the other stuff
-	   par(mar = c(1,1,4,1)+.1)
-	   plot.new();
-	   plot.window(xlim=c(3,20), ylim=c(3,20))
-	   if(points){
-	   lines(Snow.deaths[,c("x","y")], col=col, pch=pch, cex=cex, type = "p")
-	   }
-	   if(is.null(title)) { title <- "Snow's cholera map of London"}
-	   title(
-	   	xlab="", ylab="",  
-	   	main=title,font.main = 1)
+	 	# make sure that the plot limits include all the other stuff
+	  par(mar = c(1,1,4,1)+.1)
+	  plot.new();
+	  plot.window(xlim=c(3,20), ylim=c(3,20))
+	  if(points){
+	  lines(Snow.deaths[,c("x","y")], col=col, pch=pch, cex=cex, type = "p")
+	  }
+	  if(is.null(title)) { title <- "Snow's cholera map of London"}
+	  title(
+	  	xlab="", ylab="", 
+	  	main=title,font.main = 1)
 		}
 	# function to plot and label the pump locations
-	Spumps <- function(col="blue", pch=1, cex=1.5, label = TRUE)  {
-	   points(Snow.pumps[,c("x","y")], col=col, pch=pch, cex=cex, lwd = 2)
-	   if(label){
-	     text(Snow.pumps[,c("x","y")], labels=Snow.pumps$label, pos=1, cex=0.8)
-	   }
+	Spumps <- function(col="blue", pch=1, cex=1.5, label = TRUE) {
+	  points(Snow.pumps[,c("x","y")], col=col, pch=pch, cex=cex, lwd = 2)
+	  if(label){
+	   text(Snow.pumps[,c("x","y")], labels=Snow.pumps$label, pos=1, cex=0.8)
+	  }
 	}
 
 	# function to draw the streets 
@@ -44,14 +43,14 @@ require(HistData)
 
 	# draw a scale showing distance in meters in upper left
 	mapscale <- function(xs=3.5, ys=19.7) {
-	   scale <- matrix(c(0,0, 4,0, NA, NA), nrow=3, ncol=2, byrow=TRUE)
-	   colnames(scale)<- c("x","y")
+	  scale <- matrix(c(0,0, 4,0, NA, NA), nrow=3, ncol=2, byrow=TRUE)
+	  colnames(scale)<- c("x","y")
 		# tick marks
-	   scale <- rbind(scale, expand.grid(y=c(-.1, .1, NA), x=0:4)[,2:1])
-	   lines(xs+scale[,1], ys+scale[,2])
+	  scale <- rbind(scale, expand.grid(y=c(-.1, .1, NA), x=0:4)[,2:1])
+	  lines(xs+scale[,1], ys+scale[,2])
 		# value and axis labels
-	   stext <- matrix(c(0,0, 2,0, 4,0, 4, 0.1), nrow=4, ncol=2, byrow=TRUE)
-	   text(xs+stext[,1], ys+stext[,2], labels=c("0", "2", "4", "100 m."), pos=c(1,1,1,4), cex=0.8)
+	  stext <- matrix(c(0,0, 2,0, 4,0, 4, 0.1), nrow=4, ncol=2, byrow=TRUE)
+	  text(xs+stext[,1], ys+stext[,2], labels=c("0", "2", "4", "100 m."), pos=c(1,1,1,4), cex=0.8)
 	}
 
 
@@ -69,7 +68,7 @@ The goals in this chapter are twofold. First, to discuss several fairly standard
 
 ## Histograms{#hist}
  
-Let's begin with the humble ***histogram***. Histograms are one of the simplest and most useful ways of visualising data. They make most sense when you have an interval or ratio scale variable (e.g., the `afl.margins` data from Chapter \@ref(descriptives)) and what you want to do is get an overall impression of the variable. Most of you probably know how histograms work, since they're so widely used, but for the sake of completeness I'll describe them. All you do is divide up the possible values into ***bins*** and then count the number of observations that fall within each bin. This count is referred to as the frequency or density of the bin and is displayed as a vertical bar. Ihe AFL winning margins data there are 33 games in which the winning margin was less than 10 points and it is this fact that is represented by the height of the leftmost bar that we showed earlier in Chapter \@ref(descriptives), Figure \@ref(fig:histogram1). With these earlier graphs we used an advanced plotting package in \R\ which, for now, is beyond the capability of jamovi. But jamovi gets us close, and drawing this histogram in jamovi is pretty straightforward. Open up the 'plots' options under 'Exploration' - 'Descriptives' and click the 'histogram' check box, as in Figure \@ref(fig:jamovihistogram). jamovi defaults to labelling the y-axis as 'density' and the x-axis with the variable name. The ***bins*** are selected automatically, and there is no scale, or count, information on the y-axis unlike the previous Figure \@ref(fig:histogram1). But this does not matter too much because after all what we are really interested in is our impression of the shape of the distribution: is it normally distributed or is there a skew or kurtosis? Our first impressions of these characteristics come from drawing a ***histogram***.
+Let's begin with the humble [**histogram**]{color="#F58231"}. Histograms are one of the simplest and most useful ways of visualising data. They make most sense when you have an interval or ratio scale variable (e.g., the **`afl.margins`** data from Chapter \@ref(descriptives)) and what you want to do is get an overall impression of the variable. Most of you probably know how histograms work, since they're so widely used, but for the sake of completeness I'll describe them. All you do is divide up the possible values into [**bins**]{color="#F58231"} and then count the number of observations that fall within each bin. This count is referred to as the frequency or density of the bin and is displayed as a vertical bar. Ihe AFL winning margins data there are 33 games in which the winning margin was less than 10 points and it is this fact that is represented by the height of the leftmost bar that we showed earlier in Chapter \@ref(descriptives), Figure \@ref(fig:histogram1). With these earlier graphs we used an advanced plotting package in \R\ which, for now, is beyond the capability of jamovi. But jamovi gets us close, and drawing this histogram in jamovi is pretty straightforward. Open up the 'plots' options under 'Exploration' - 'Descriptives' and click the 'histogram' check box, as in Figure \@ref(fig:jamovihistogram). jamovi defaults to labelling the y-axis as 'density' and the x-axis with the variable name. The [**bins**]{color="#F58231"} are selected automatically, and there is no scale, or count, information on the y-axis unlike the previous Figure \@ref(fig:histogram1). But this does not matter too much because after all what we are really interested in is our impression of the shape of the distribution: is it normally distributed or is there a skew or kurtosis? Our first impressions of these characteristics come from drawing a [**histogram**]{color="#F58231"}.
 
 ```{r jamovihistogram, fig.cap="jamovi screen showing the histogram check box", echo=FALSE, fig.align="center", out.width="100%"}
 
@@ -77,9 +76,9 @@ knitr::include_graphics("img/graphics/jamovi_histogram.png", error = TRUE)
 
 ```
 
-One additional feature that jamovi provides is the ability to plot a 'Density' curve. You can do this by clicking the 'Density' check box under the 'Plots' options (and unchecking 'Histogram'), and this gives us the plot shown in Figure \@ref(fig:histogram2). A density plot visualises the distribution of data over a continuous interval or time period. This chart is a variation of a histogram that uses ***kernel smoothing*** to plot values, allowing for smoother distributions by smoothing out the noise. The peaks of a density plot help display where values are concentrated over the interval. An advantage density plots have over histograms is that they are better at determining the distribution shape because they're not affected by the number of bins used (each bar used in a typical histogram). A histogram comprising of only 4 bins wouldn't produce a distinguishable enough shape of distribution as a 20-bin histogram would. However, with density plots, this isn't an issue.
+One additional feature that jamovi provides is the ability to plot a 'Density' curve. You can do this by clicking the 'Density' check box under the 'Plots' options (and unchecking 'Histogram'), and this gives us the plot shown in Figure \@ref(fig:histogram2). A density plot visualises the distribution of data over a continuous interval or time period. This chart is a variation of a histogram that uses [**kernel smoothing**]{color="#F58231"} to plot values, allowing for smoother distributions by smoothing out the noise. The peaks of a density plot help display where values are concentrated over the interval. An advantage density plots have over histograms is that they are better at determining the distribution shape because they're not affected by the number of bins used (each bar used in a typical histogram). A histogram comprising of only 4 bins wouldn't produce a distinguishable enough shape of distribution as a 20-bin histogram would. However, with density plots, this isn't an issue.
 
-```{r histogram2, fig.cap="A density plot of the `afl.margins` variable plotted in jamovi", echo=FALSE, fig.align="center", out.width="100%"}
+```{r histogram2, fig.cap="A density plot of the **`afl.margins`** variable plotted in jamovi", echo=FALSE, fig.align="center", out.width="100%"}
 
 knitr::include_graphics("img/graphics/histogram2.png", error = TRUE)
 
@@ -90,20 +89,20 @@ Although this image would need a lot of cleaning up in order to make a good pres
 
 ## Boxplots{#boxplots}
 
-Another alternative to histograms is a ***boxplot***, sometimes called a 'box and whiskers' plot. Like histograms they're most suited to interval or ratio scale data. The idea behind a boxplot is to provide a simple visual depiction of the median, the interquartile range, and the range of the data. And because they do so in a fairly compact way boxplots have become a very popular statistical graphic, especially during the exploratory stage of data analysis when you're trying to understand the data yourself. Let's have a look at how they work, again using the `afl.margins` data as our example.
+Another alternative to histograms is a [**boxplot**]{color="#F58231"}, sometimes called a 'box and whiskers' plot. Like histograms they're most suited to interval or ratio scale data. The idea behind a boxplot is to provide a simple visual depiction of the median, the interquartile range, and the range of the data. And because they do so in a fairly compact way boxplots have become a very popular statistical graphic, especially during the exploratory stage of data analysis when you're trying to understand the data yourself. Let's have a look at how they work, again using the **`afl.margins`** data as our example.
 
-```{r boxplot1, fig.cap="A box plot of the `afl.margins` variable plotted in jamovi", echo=FALSE, fig.align="center", out.width="100%"}
+```{r boxplot1, fig.cap="A box plot of the **`afl.margins`** variable plotted in jamovi", echo=FALSE, fig.align="center", out.width="100%"}
 
 knitr::include_graphics("img/graphics/boxplot1.png", error = TRUE)
 
 ```
 
 
-The easiest way to describe what a boxplot looks like is just to draw one. Click on the 'Box plot' check box and you will get the plot shown on the lower right of Figure \@ref(fig:boxplot1). jamovi has drawn the most basic boxplot possible. When you look at this plot this is how you should interpret it: the thick line in the middle of the box is the median; the box itself spans the range from the 25th percentile to the 75th percentile; and the 'whiskers' go out to the most extreme data point that doesn't exceed a certain bound. By default, this value is 1.5 times the interquartile range (IQR), calculated as `25th percentile - (1.5*IQR)` for the lower boundary, and `75th percentile + (1.5*IQR)` for the upper boundary. Any observation whose value falls outside this range is plotted as a circle or dot instead of being covered by the whiskers, and is commonly referred to as an ***outlier***. For our AFL margins data there are two observations that fall outside this range, and these observations are plotted as dots (the upper boundary is 107, and looking over the data column in the spreadsheet there are two observations with values higher than this, 108 and 116, so these are the dots). 
+The easiest way to describe what a boxplot looks like is just to draw one. Click on the 'Box plot' check box and you will get the plot shown on the lower right of Figure \@ref(fig:boxplot1). jamovi has drawn the most basic boxplot possible. When you look at this plot this is how you should interpret it: the thick line in the middle of the box is the median; the box itself spans the range from the 25th percentile to the 75th percentile; and the 'whiskers' go out to the most extreme data point that doesn't exceed a certain bound. By default, this value is 1.5 times the interquartile range (IQR), calculated as `25th percentile - (1.5*IQR)` for the lower boundary, and `75th percentile + (1.5*IQR)` for the upper boundary. Any observation whose value falls outside this range is plotted as a circle or dot instead of being covered by the whiskers, and is commonly referred to as an [**outlier**]{color="#F58231"}. For our AFL margins data there are two observations that fall outside this range, and these observations are plotted as dots (the upper boundary is 107, and looking over the data column in the spreadsheet there are two observations with values higher than this, 108 and 116, so these are the dots). 
 
 ### Violin plots{#violinplots}
 
-```{r boxplot2, fig.cap="A violin plot of the `afl.margins` variable plotted in jamovi, alsow showing a box plot and data points", echo=FALSE, fig.align="center", out.width="100%"}
+```{r boxplot2, fig.cap="A violin plot of the **`afl.margins`** variable plotted in jamovi, also showing a box plot and data points", echo=FALSE, fig.align="center", out.width="100%"}
 
 knitr::include_graphics("img/graphics/boxplot2.png", error = TRUE)
 
@@ -113,7 +112,7 @@ A variation to the traditional box plot is the violin plot. Violin plots are sim
 
 ### Drawing multiple boxplots{#multipleboxplots}
 
-One last thing. What if you want to draw multiple boxplots at once? Suppose, for instance, I wanted separate boxplots showing the AFL margins not just for 2010 but for every year between 1987 and 2010. To do that the first thing we'll have to do is find the data. These are stored in the `aflsmall2.csv` file. So let's load it into jamovi and see what is in it. You will see that it is a pretty big data set. It contains 4296 games and the variables that we're interested in. What we want to do is have jamovi draw boxplots for the `margin` variable, but plotted separately for each  `year`. The way to do this is to move the `year` variable across into the 'Split by' box, as in Figure \@ref(fig:splitfile1)
+One last thing. What if you want to draw multiple boxplots at once? Suppose, for instance, I wanted separate boxplots showing the AFL margins not just for 2010 but for every year between 1987 and 2010. To do that the first thing we'll have to do is find the data. These are stored in the **`aflsmall2.csv`** file. So let's load it into jamovi and see what is in it. You will see that it is a pretty big data set. It contains 4296 games and the variables that we're interested in. What we want to do is have jamovi draw boxplots for the **`margin`** variable, but plotted separately for each **`year`**. The way to do this is to move the `year` variable across into the 'Split by' box, as in Figure \@ref(fig:splitfile1)
 
 ```{r splitfile1, fig.cap="jamovi screen shot showing the 'Split by' window", echo=FALSE, fig.align="center", out.width="100%"}
 
@@ -123,7 +122,7 @@ knitr::include_graphics("img/graphics/splitfile1.png", error = TRUE)
 
 The result is shown in Figure \@ref(fig:boxplot3). This version of the box plot, split by year, gives a sense of why it's sometimes useful to choose box plots instead of histograms. It's possible to get a good sense of what the data look like from year to year without getting overwhelmed with too much detail. Now imagine what would have happened if I'd tried to cram 24 histograms into this space: no chance at all that the reader is going to learn anything useful.
 
-```{r boxplot3, fig.cap="Multiple boxplots plotted in jamovi, for the `margin` by `year` variables in the `aflsmall2` data set", echo=FALSE, fig.align="center", out.width="100%"}
+```{r boxplot3, fig.cap="Multiple boxplots plotted in jamovi, for the **`margin`** by **`year`** variables in the **`aflsmall2`** data set", echo=FALSE, fig.align="center", out.width="100%"}
 
 knitr::include_graphics("img/graphics/boxplot3.png", error = TRUE)
 
@@ -131,13 +130,15 @@ knitr::include_graphics("img/graphics/boxplot3.png", error = TRUE)
 
 ### Using box plots to detect outliers{#boxplotoutliers}
 
+
+Because the boxplot automatically separates out those observations that lie outside a certain range, depicting them with a dot in jamovi, people often use them as an informal method for detecting [**outliers**]{color="#F58231"}: observations that are 'suspiciously' distant from the rest of the data. Here's an example. Suppose that I'd drawn the boxplot for the AFL margins data and it came up looking like Figure \@ref(fig:boxplot4). It's pretty clear that something funny is going on with two of the observations. Apparently, there were two games in which the margin was over 300 points! That doesn't sound right to me. Now that I've become suspicious it's time to look a bit more closely at the data. In jamovi you can quickly find out which of these observations are suspicious and then you can go back to the raw data to see if there has been a mistake in data entry. To do this you need to set up a filter so that only those observations with values over a certain threshold are included. In our example, the threshold is over 300, so that is the filter we will create. First, click on the 'Filters' button at the top of the jamovi window, and then type 'margin $>$ 300' into the filter field, as in Figure \@ref(fig:filter1). 
+
 ```{r boxplot4, fig.cap="A boxplot showing two very suspicious outliers!", echo=FALSE, fig.align="center", out.width="100%"}
 
 knitr::include_graphics("img/graphics/boxplot4.png", error = TRUE)
 
 ```
 
-Because the boxplot automatically separates out those observations that lie outside a certain range, depicting them with a dot in jamovi, people often use them as an informal method for detecting ***outliers***: observations that are 'suspiciously' distant from the rest of the data. Here's an example. Suppose that I'd drawn the boxplot for the AFL margins data and it came up looking like Figure \@ref(fig:boxplot4). It's pretty clear that something funny is going on with two of the observations. Apparently, there were two games in which the margin was over 300 points! That doesn't sound right to me. Now that I've become suspicious it's time to look a bit more closely at the data. In jamovi you can quickly find out which of these observations are suspicious and then you can go back to the raw data to see if there has been a mistake in data entry. To do this you need to set up a filter so that only those observations with values over a certain threshold are included. In our example, the threshold is over 300, so that is the filter we will create. First, click on the 'Filters' button at the top of the jamovi window, and then type 'margin $>$ 300' into the filter field, as in Figure \@ref(fig:filter1). 
 
 ```{r filter1, fig.cap="the jamovi filter screen", echo=FALSE, fig.align="center", out.width="100%"}
 
@@ -153,18 +154,18 @@ knitr::include_graphics("img/graphics/filter2.png", error = TRUE)
 
 ```
 
-Usually you find that someone has just typed in the wrong number. Whilst this might seem like a silly example, I should stress that this kind of thing actually happens a lot. Real world data sets are often riddled with stupid errors, especially when someone had to type something into a computer at some point. In fact, there's actually a name for this phase of data analysis and in practice it can take up a huge chunk of our time: ***data cleaning***. It involves searching for typing mistakes ('typos'), missing data and all sorts of other obnoxious errors in raw data files.
+Usually you find that someone has just typed in the wrong number. Whilst this might seem like a silly example, I should stress that this kind of thing actually happens a lot. Real world data sets are often riddled with stupid errors, especially when someone had to type something into a computer at some point. In fact, there's actually a name for this phase of data analysis and in practice it can take up a huge chunk of our time: [**data cleaning**]{color="#F58231"}. It involves searching for typing mistakes ('typos'), missing data and all sorts of other obnoxious errors in raw data files.
 
 For less extreme values, even if they are flagged in a a boxplot as outliers, the decision about whether to include outliers or exclude them in any analysis depends heavily on *why* you think the data look they way they do and what you want to use the data *for*. You really need to exercise good judgement here. If the outlier looks legitimate to you, then keep it. In any case, I'll return to the topic again in Section \@ref(regressiondiagnostics). 
 
 
 ## Bar graphs{#bargraph}
 
-Another form of graph that you often want to plot is the ***bar graph***. Let's use the `afl.finalists` data set with the `afl.finalists` variable that I introduced in Section \@ref(mode). What I want to do is draw a bar graph that displays the number of finals that each team has played in over the time spanned by the `afl.finalists` data set. There are lots of teams, but I am particularly interested in just four: Brisbane, Carlton, Fremantle and Richmond. So the first step is to set up a filter so just those four teams are included in the bar graph. This is straightforward in jamovi and you can do it by using the 'Filters' function that we used previously. Open up the 'Filters' screen and type in the following: 
+Another form of graph that you often want to plot is the [**bar graph**]{color="#F58231"}. Let's use the **`afl.finalists`** data set with the **`afl.finalists`** variable that I introduced in Section \@ref(mode). What I want to do is draw a bar graph that displays the number of finals that each team has played in over the time spanned by the **`afl.finalists`** data set. There are lots of teams, but I am particularly interested in just four: Brisbane, Carlton, Fremantle and Richmond. So the first step is to set up a filter so just those four teams are included in the bar graph. This is straightforward in jamovi and you can do it by using the 'Filters' function that we used previously. Open up the 'Filters' screen and type in the following: 
 
 `afl.finalists == ‘Brisbane’ or afl.finalists == ‘Carlton’ or afl.finalists == ‘Fremantle’ or afl.finalists == ‘Richmond’`^[jamovi uses the symbol `==` here to mean 'matches'.] 
 
-When you have done this you will see, in the 'Data' view, that jamovi has filtered out all values apart from those we have specified. Next, open up the 'Exploration' - 'Descriptives' window and click on the 'Bar plot' check box (remember to move the `afl.finalists` variable across into the 'Variables' box so that jamovi knows which variable to use). You should then get a bar graph, something like that shown in Figure \@ref(fig:bar1).
+When you have done this you will see, in the 'Data' view, that jamovi has filtered out all values apart from those we have specified. Next, open up the 'Exploration' - 'Descriptives' window and click on the 'Bar plot' check box (remember to move the **`afl.finalists`** variable across into the 'Variables' box so that jamovi knows which variable to use). You should then get a bar graph, something like that shown in Figure \@ref(fig:bar1).
 
 ```{r bar1, fig.cap="Filtering to include just four AFL teams, and drawing a bar plot in jamovi", echo=FALSE, fig.align="center", out.width="100%"}
 
